# SkyDo

./: .gitignore  README.md  TODO.md  UPDATE_LOG.md  package-lock.json  package.json  update.json
.github/workflows/: release.yml
.github/workflows/scripts/: updater.mjs
app/: cache.db  cache.db-shm  cache.db-wal  cache.py  config.py  log.py  pre_commit.py  router.py  routes.py  run.py  skydo_wechat_notifier.py  wechat.py
scripts/: release.mjs  update.mjs  updatelog.mjs  updater.mjs
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  SkyDo.xlsx  tauri.conf.json
src-tauri/src/: main.rs
src/api/: wechat.js
src/components/: ContextMenu.vue  SkyHeader.vue
src/router/: index.js
src/style/: index.css
src/utils/: csv.js  db.js  notification.js  request.js
src/views/: Done.vue  Settings.vue  Todo.vue
ui/: README.md  index.html  package.json  vite.config.js
ui/src/: main.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src/components/: SkyDialog.vue
ui/src/style/: index.css
ui/src/utils/: common.js  notification.js
ui/src/views/: Done.vue
